--- a/Assignment/Rakesh Kumar Sahoo/pos project file/transaction.css
+++ b/Assignment/Rakesh Kumar Sahoo/pos project file/transaction.css
@@ -35,34 +35,13 @@ th{
 }
 
 button {
-    --b: 3px;   
-    --s: .45em; 
-    --color: #373B44;
-    padding: calc(.5em + var(--s)) calc(.9em + var(--s));
-    color: var(--color);
-    --_p: var(--s);
-    background:
-      conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
-      var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
-    transition: .3s linear, color 0s, background-color 0s;
-    outline: var(--b) solid #0000;
-    outline-offset: .6em;
-    font-size: 16px;
-    border: 0;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-  }
-  
-  button:hover,
-  button:focus-visible{
-    --_p: 0px;
-    outline-color: var(--color);
-    outline-offset: .05em;
-  }
-  
-  button:active {
-    background: var(--color);
-    color: #fff;
-  }
+  --b: 3px;   
+  --s: .45em; 
+  --color: #373B44;
+  border-radius: 50rem;
+  padding: calc(.3em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  font-size: 16px;
+  cursor: pointer;
+}
   
